Updated software header to MySnow-2026 instead of MysSnow3. Build both app and dmg from scripts